12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (IOMETER2 - 2004.mm.dd):
==================================

- Applied patches:
   - #1184731 : iometer-2004.07.30-post.Ming010CpuAffinity.patch by
     Ming Zhang (adds CPU affinity support for Linux and Windows).
   - #1184707 : iometer-2004.07.30-post.Ming009SysLogSupport.patch by
     Ming Zhang (adds syslog support/reporting for Linux and Solaris).
   - #1184691 : iometer-2004.07.30-post.Ming008LoginWarning.patch by
     Ming Zhang (Minor patch that adds an additional warning during
     the login process).
   - #1088711 : iometer-2004.07.30-post.Andy001BugFixFor1088486.patch
     by Andy Currid (Implements a bug fix in regards to IO completions -
     see bug report #1088486).
   - #1184671 : iometer-2004.07.30-post.Ming006ParseParamStruct.patch
     by Ming Zhang (Patch that introduces the dynamo_param structure
     which contains the arguments given to the dynamo executable).
   - #1184668 : iometer-2004.07.30-post.Thayne001NetwareFollowUp.patch
     by Thayne Harmon (Significant patch applying some adjustments as
     well as adding support for network statistics).
   - #1184663 : iometer-2004.07.30-post.Ming005TargetDiskOverflow.patch
     by Ming Zhang (Patch applying the fix submitted by moozart@gmx.de
     which resolves a serious overflow in the IOTargetDisk.cpp file).
   - #1184661 : iometer-2004.07.30-post.Ming004AdjustPrintMessage.patch
     by Ming Zhang (Tiny patch that corrects a message printed).
   - #1184655 : iometer-2004.07.30-post.Ming003Gcc34Support.patch by
     Ming Zhang (Adds support for the gcc 3.4 compiler).   
   - iometer-2004.07.30-post.Ming002AbsolutePathForDevices.patch by
     Ming Zhang (Small patch that now reports the raw device names