@@ -8,7 +8,7 @@ USE_CRTDLL=1
 BROWSER_INFO=1
 
 INCLUDES=$(SDK_INC_PATH); $(MSSDK)\INCLUDE; ..
-C_DEFINES=$(C_DEFINES) -D_PULSAR_ -DDOSWIN32 -DUSING_DDK
+C_DEFINES=$(C_DEFINES) -D_PULSAR_ -DDOSWIN32 -DUSING_DDK -D_AFX_NO_RICHEDIT_SUPPORT
 LINKER_OPTIDATA=$(LINKER_OPTIDATA) /STACK:0xc0000,0x2000
 
 UMTYPE=console
@@ -25,7 +25,7 @@ TARGETLIBS=$(SDK_LIB_PATH)\KERNEL32.LIB \
     $(SDK_LIB_PATH)\COMDLG32.LIB	\
     $(SDK_LIB_PATH)\SHELL32.LIB		\
     $(SDK_LIB_PATH)\VERSION.LIB		\
-    $(SDK_LIB_PATH)\MSVCPRT.LIB		\
+    $(CRT_LIB_PATH)\MSVCPRT.LIB		\
     $(SDK_LIB_PATH)\SETUPAPI.LIB
 
 
