@@ -4,10 +4,13 @@
 
 
 
-ChangeLog (IOMETER2 - 2004.mm.dd):
+ChangeLog (IOMETER2 - 2005.mm.dd):
 ==================================
 
 - Applied patches:
+   - #1184741 : iometer-2004.07.30-post.Henry002Ia64LinuxAndDdkCleanup.patch
+     by Henryx W. Tieman (Does some cleanup on the Windows/IA64 build
+     using the DDK and brings basic support for a Linux/IA64 port).
    - #1184731 : iometer-2004.07.30-post.Ming010CpuAffinity.patch by
      Ming Zhang (adds CPU affinity support for Linux and Windows).
    - #1184707 : iometer-2004.07.30-post.Ming009SysLogSupport.patch by
